--- a/240319_html 연습/css/style.css
+++ b/240319_html 연습/css/style.css
@@ -1,3 +1,59 @@
 h1{
     color:#333333;
 }
+
+li{
+    background-color:chocolate;
+}
+
+ul > li{        /*ul 바로 아래 자식 li에 적용*/
+    background-color: rgb(179, 226, 160);
+}
+
+ul > ul > li{       /*ul 자식 ul 자식 li에 적용*/
+    background-color: blue;
+}
+
+.korea {
+    color: blue;
+}
+
+.japan {
+    color: crimson;
+}
+
+.incheon { 
+    color: darkgreen;
+}
+
+#leader {
+    color: gold;
+}
+
+li:first-child {        /*첫째인데 li인 아이*/
+    font-weight: bold;
+}
+
+li:last-child {         /*막내인데 li인 아이*/
+    font-style: italic;
+}
+
+li:nth-child(3) {
+    color: pink;
+}
+
+li:nth-child(2n) {      /*짝수번째인데 li인 아이*/
+    background-color: cornflowerblue;
+}
+
+h1, h3 {        /*h1과 h3에 모두 적용*/
+    /*background-color: darkgrey;*/
+}
+
+h1 + h2 {       /*h1과 h3는 자매여야함. h1 바로 아랫자매 h2에 적용*/
+    background-color: rgb(168, 24, 24);
+}
+
+h1 ~ h3 {       /*h1과 h3 자매여야함. h1 아랫자매 모든 h3에 적용*/
+    background-color: indianred;
+}
