--- a/240514_nav/css/nav.css
+++ b/240514_nav/css/nav.css
@@ -45,7 +45,7 @@ nav.container{
     align-items: center;    /* 교차축(세로)으로 가운데 정력 */
     padding: 0 40px ;   /* 왼/오른만 양쪽 여백*/
     color: #fff;
-    font-size: var(--h2-font-size);     /*웹 폰트 아이콘, 글자 크게 */
+    font-size: var(--h2-font-size);     /* 웹 폰트 아이콘, 글자 크게 */
 }
 nav a {
     color: #fff;
@@ -71,9 +71,10 @@ nav a {
         flex-direction: column; /* 세로로 배치 */
         background-color: hsla(200, 100%, 25%, 0.6);
         position: absolute;
-        top: var( --nav-height); /*실제 위치는 44px - 140px*/
+        top: calc var( (--nav-height) - 140px); /* 실제 위치는 44px - 140px. !주의 연산자 양 옆 띄어쓰기 꼭 해야함*/
         right: 0;
         left: 0;
+        z-index: -1; /* nav뒤에 숨기자 */
     }
 
     .nav-item{
@@ -82,10 +83,17 @@ nav a {
         width: 100%;    /* 가로 너비 100% */
         text-align: center; /* 글자 가운데 */
     }
+
     .nav-link{
         display: block; /* 링크의 너비: 콘텐츠 -> 100%로 늘리자 */
     }
+
     .nav-toggle{
         display: block; /* 햄버거 메뉴 보여라 */
     }
+
+    .show-menu {
+        top: var(--nav-height); /* nav-list아래로 내리자*/
+    }
+
 }
