js 깔끔하게 데이터 처리(정규표현식), changeDate에서 호출

--- a/240514_nav/css/nav.css
+++ b/240514_nav/css/nav.css
@@ -44,7 +44,7 @@ nav.container{
     height: var(--nav-height);
     display: flex;  /* 기본값 : 가로로 배치 */
     justify-content: space-between; /* 메인축(가로)으로 양쪽 정렬 */
-    align-items: center;    /* 교차축(세로)으로 가운데 정력 */
+    align-items: center;    /* 교차축(세로)으로 가운데 정렬 */
     padding: 0 40px ;   /* 왼/오른만 양쪽 여백*/
     color: #fff;
     font-size: var(--h2-font-size);     /* 웹 폰트 아이콘, 글자 크게 */
