icon위치 확실히 가운데, .nav-list배경 흐리게, header z-index위로

--- a/240514_nav/css/nav.css
+++ b/240514_nav/css/nav.css
@@ -37,6 +37,7 @@ body>header{
     top: 0;
     right: 0;
     left: 0;
+    z-index: 1;
 }
 
 nav.container{
@@ -63,11 +64,13 @@ nav a {
     align-items: center;
     column-gap: 40px;   /* 열 사이의 간격 */
     transition: 0.4s ease-in-out;
+    backdrop-filter: blur(4px); /*배경 흐리게*/
 }
 
 .nav-toggle{
     display: none;  /* 햄버거 바 사라짐 */
     cursor:pointer;
+    margin-top: 6px;
 }
 
 /* mobile */
