--- a/240514_nav/css/dormitory.css
+++ b/240514_nav/css/dormitory.css
@@ -41,4 +41,30 @@ main {
     width: min(100%, 600px); /*600px보다 크면, 600px, 작으면 100%*/
 }
 
+#calendar{
+    display: none;
+}
 
+#selection-washingmachine-time{
+    margin-top: 100px;
+}
+
+.flex-container{
+    display: flex;
+    column-gap: 20px;
+}
+
+#dormitory select{
+    font-size: var(--h2--font-size);
+    border: none;
+    background-color: #f0f0f0;
+    border-radius: 25px;
+    padding: 15px 20px;
+}
+
+.btn{
+    font-size: var(--h2--font-size);
+    padding: 10px 20px;
+    margin-top: 40px;
+    float: right; /*오른쪽 정렬*/
+}
