--- a/240514_nav/css/dormitory.css
+++ b/240514_nav/css/dormitory.css
@@ -35,17 +35,18 @@ main {
 }
 
 #calendar {
-    margin-top: 20px;
     /* width: 100%;
     max-width: 600px; */
     width: min(100%, 600px); /*600px보다 크면, 600px, 작으면 100%*/
 }
 
-#calendar{
+#calendar,
+#selection-washingmachine-time{
     display: none;
 }
 
-#selection-washingmachine-time{
+#selection-washingmachine-time,
+#selection-room-name{
     margin-top: 100px;
 }
 
@@ -54,7 +55,8 @@ main {
     column-gap: 20px;
 }
 
-#dormitory select{
+#dormitory select,
+#dormitory input{
     font-size: var(--h2--font-size);
     border: none;
     background-color: #f0f0f0;
