dormitory 세탁기 예약 현황표 html, css

--- a/240514_nav/css/dormitory.css
+++ b/240514_nav/css/dormitory.css
@@ -41,12 +41,14 @@ main {
 }
 
 #calendar,
-#selection-washingmachine-time{
+#selection-washingmachine-time,
+#selection-room-name{
     display: none;
 }
 
 #selection-washingmachine-time,
-#selection-room-name{
+#selection-room-name,
+#board{
     margin-top: 100px;
 }
 
@@ -69,4 +71,22 @@ main {
     padding: 10px 20px;
     margin-top: 40px;
     float: right; /*오른쪽 정렬*/
+}
+
+.board-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+    
+}
+
+#board .header{
+    background-color: beige;
+}
+
+#board .item {
+    color: black;
+    font-size: var(--h2--font-size);
+    border: 1px solid gray;
+    height: 40px;
+    padding: 10px 20px;
 }
