--- a/240514_nav/css/dormitory.css
+++ b/240514_nav/css/dormitory.css
@@ -26,7 +26,7 @@ main {
     padding: 5px 15px;
 }
 
-.selection-menu,
+.select-menu,
 .selection-item:hover{
     cursor: pointer;
     background-color: white;
@@ -42,9 +42,11 @@ main {
 
 #calendar,
 #selection-washingmachine-time,
-#selection-room-name{
+#selection-room-name,
+#board{
     display: none;
 }
+
 
 #selection-washingmachine-time,
 #selection-room-name,
